--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,28 +1,5 @@
-inherit_gem :
-  unreleased-rubocop-config : .rubocop.yml
-
-inherit_from: .rubocop_todo.yml
-
 Metrics/LineLength:
   Max: 120
 
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
-Layout/AlignParameters:
-  Enabled: false
-
 Metrics/ClassLength:
-  Enabled: false
-
-Style/Documentation:
-  Enabled: false
-
-Metrics/MethodLength:
-  Enabled: false
-
-Metrics/AbcSize:
-  Enabled: false
-
-Style/ConditionalAssignment:
-  Enabled: false
+  Max: 133
